# esp-audioutil

./: CMakeLists.txt  sdkconfig.defaults.esp32s3
components/freertos_cpp/: CMakeLists.txt
components/freertos_cpp/include/: esp_error.hpp  eventgroup.hpp  mutex.hpp  queue.hpp  tickinterval.hpp
main/: CMakeLists.txt  arch.hpp  audioutil.hpp  executor.hpp  main.cpp  simdutil.hpp  sintable.hpp  thrdprio.hpp  tmr.hpp
